spring-actuator 추가 애플리케이션에 대한 여러가지 정보를 보여줌

--- a/learn-spring-boot/src/main/resources/application.properties
+++ b/learn-spring-boot/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 logging.level.org.springframework=debug
+spring.profiles.active=
+
+# *\uC744 \uC0AC\uC6A9\uD558\uBA74 \uC5D4\uB4DC\uD3EC\uC778\uD2B8\uAC00 \uC804\uBD80 \uBCF4\uC774\uC9C0\uB9CC \uCEF4\uD4E8\uD130\uC5D0 \uBD80\uD558\uAC00 \uD06C\uB2E4
+management.endpoints.web.exposure.include=health,metrics
