SpringBootvalidation 으로 데이터 유효성 검사설정 추가 Entity에서 어노테이션으로 유효성 조건 및 에러메세지 설정 CustomizedResponseEntityExceptionHandler 에서 handleMethodArgumentNotValid를 오버라이드해 errordetail과 badRequest 리턴

--- a/restful-web-services/build.gradle
+++ b/restful-web-services/build.gradle
@@ -18,6 +18,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	//devtools 주석처리하면 에러페이지에서 추척로그가 안뜬다
 	//추가로 jar파일로 배포해서 운영할때는 devtools가 자동으로 비활성화되서 주석처리할 필요없다
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
