--- a/restful-web-services/build.gradle
+++ b/restful-web-services/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.0'
 	//devtools 주석처리하면 에러페이지에서 추척로그가 안뜬다
 	//추가로 jar파일로 배포해서 운영할때는 devtools가 자동으로 비활성화되서 주석처리할 필요없다
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
