--- a/restful-web-services/build.gradle
+++ b/restful-web-services/build.gradle
@@ -20,9 +20,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	//open api를 위한 스웨거 Ui
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.0'
-	// json, xml 을 header accept에 따라 자동으로 변환해주는 의존성
-	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
+//	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.0'
+//	// json, xml 을 header accept에 따라 자동으로 변환해주는 의존성
+//	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
 	//devtools 주석처리하면 에러페이지에서 추척로그가 안뜬다
 	//추가로 jar파일로 배포해서 운영할때는 devtools가 자동으로 비활성화되서 주석처리할 필요없다
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
