--- a/restful-web-services/build.gradle
+++ b/restful-web-services/build.gradle
@@ -19,6 +19,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	// rest api끼리의 uri 생성을 표준으로 자동화 해주는 의존성
+	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
 	//open api를 위한 스웨거 Ui
 //	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.0'
 //	// json, xml 을 header accept에 따라 자동으로 변환해주는 의존성
