--- a/restful-web-services/build.gradle
+++ b/restful-web-services/build.gradle
@@ -18,6 +18,10 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.data:spring-data-rest-hal-explorer'
+	// 모니터링 의존성
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	// 데이터 유효성 검증 의존성
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	// rest api끼리의 uri 생성을 표준으로 자동화 해주는 의존성
 	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
