--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 logging.level.org.springframework:info
 # ??? actuator ?? ?? api? ?? ?? ??
 management.endpoints.web.exposure.include=*
+# h2console ????
+spring.h2.console.enabled=true
+# h2 ?????? url ??
+spring.datasource.url=jdbc:h2:mem:testdb
+
+# sql ?? ???
+spring.jpa.show-sql=true
+
+# datasource ???? data.sql ??? ?????. (resources ?? ?? sql ??? ???? sql???
+# jpa ??? ???? ?? ???? ???.
+spring.jpa.defer-datasource-initialization=true
